--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_bloc: 3.0.0
   equatable: 0.2.6
   shared_preferences: 0.5.6
+  sqflite: ^1.2.0
+  path_provider: ^1.5.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
