--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: 3.0.0
+  flutter_widgets 0.1.9
   sqflite: ^1.2.0
   path_provider: ^1.5.1
   # The following adds the Cupertino Icons font to your application.
