--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   sqflite: ^1.2.0
   path_provider: ^1.5.1
   table_calendar: ^2.2.3
+  reflectable: ^2.2.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
